--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/ico" href="/favicon.ico">
+    <link rel="manifest" href="/site.webmanifest">
     <!-- Preconnect to Google Maps for faster map load on Contact Us -->
     <link rel="preconnect" href="https://www.google.com" crossorigin />
     <link rel="preconnect" href="https://maps.googleapis.com" crossorigin />
@@ -10,7 +15,7 @@
     <link 
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" 
       rel="stylesheet"/>
-    <title>das-design-arch-studio</title>
+    <title>designarchstudio</title>
   </head>
   <body>
     <div id="root"></div>
