updated testimonials css & added google meta tag

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link 
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" 
       rel="stylesheet"/>
+    <meta name="google-site-verification" content="ilDbKuQjJs7sakQW0tGBhJwR7VmFbIRdWgAJdA3IUoY"/>
     <title>designarchstudio</title>
   </head>
   <body>
