changes in title and description and also removed details of education in resumes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" 
       rel="stylesheet"/>
     <meta name="google-site-verification" content="ilDbKuQjJs7sakQW0tGBhJwR7VmFbIRdWgAJdA3IUoY"/>
-    <title>designarchstudio</title>
+    <meta name="description" content="Design Arch Studio is a Hyderabad-based multidisciplinary architecture and interior design studio specializing in residential, commercial, planning, and visualization services." />
+    <title>Design Arch Studio</title>
   </head>
   <body>
     <div id="root"></div>
