--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <meta name="google-site-verification" content="ilDbKuQjJs7sakQW0tGBhJwR7VmFbIRdWgAJdA3IUoY"/>
     <meta name="description" content="Design Arch Studio is a Hyderabad-based multidisciplinary architecture and interior design studio specializing in residential, commercial, planning, and visualization services." />
     <title>Design Arch Studio</title>
+    <link rel="canonical" href="https://www.designarchstudio.in/" />
+    <meta property="og:title" content="Design Arch Studio" />
+    <meta property="og:description" content="Design Arch Studio is a Hyderabad-based multidisciplinary architecture and interior design studio specializing in residential, commercial, planning, and visualization services." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.designarchstudio.in/" />
+    <meta property="og:image" content="/assets/og-image.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Design Arch Studio" />
+    <meta name="twitter:description" content="Design Arch Studio is a Hyderabad-based multidisciplinary architecture and interior design studio specializing in residential, commercial, planning, and visualization services." />
   </head>
   <body>
     <div id="root"></div>
